--- a/app/src/main/res/layout/activity_voulntering_application.xml
+++ b/app/src/main/res/layout/activity_voulntering_application.xml
@@ -22,7 +22,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="4dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:background="#878A8C"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,11 +31,10 @@
         android:id="@+id/TEXTID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="23dp"
         android:background="@color/background_not_whit"
         android:fontFamily="sans-serif-black"
         android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"
         android:text="@string/get_id"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/nameEditID"
@@ -47,10 +46,9 @@
         android:id="@+id/nameTEXT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"
         android:text="@string/name"
         android:textColor="#000"
         android:textSize="20sp"
@@ -59,7 +57,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TEXTID" />
     <EditText
-
         android:id="@+id/nameEditID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -68,8 +65,7 @@
         android:hint="@string/enter_your_name"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:paddingHorizontal="5dp"
-        android:paddingVertical="5dp"
+        android:paddingHorizontal="10dp"
         android:textAlignment="center"
         android:textColor="#000"
         android:textSize="20sp"
@@ -81,10 +77,9 @@
         android:id="@+id/phoneTEXT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"
         android:text="@string/phone_number"
         android:textColor="#000"
         android:textSize="20sp"
@@ -101,8 +96,7 @@
         android:hint="@string/enter_you_phone_number"
         android:importantForAutofill="no"
         android:inputType="phone"
-        android:paddingHorizontal="5dp"
-        android:paddingVertical="5dp"
+        android:paddingHorizontal="10dp"
         android:textAlignment="center"
         android:textColor="#000"
         android:textSize="20sp"
@@ -115,10 +109,9 @@
         android:id="@+id/mailTEXT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"
         android:text="@string/email"
         android:textColor="#000"
         android:textSize="20sp"
@@ -152,7 +145,6 @@
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-medium"
         android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"
         android:text="@string/message"
         android:textColor="#000"
         android:textSize="20sp"
@@ -165,7 +157,6 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
         android:paddingHorizontal="10dp"
-        android:paddingVertical="10dp"
         android:text="@string/optional"
         android:layout_marginTop="20dp"
         android:textColor="#000"
@@ -173,5 +164,71 @@
         app:layout_constraintBottom_toTopOf=""
         app:layout_constraintStart_toEndOf="@id/messageTEXT"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toBottomOf="@id/mailEditID" />
+        app:layout_constraintTop_toBottomOf="@id/mailEditID"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="20dp"
+        android:id="@+id/card"
+        app:cardCornerRadius="15dp"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/messageTEXT">
+        <EditText
+            android:id="@+id/messageEditID"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="start"
+            android:hint="@string/type_a_message"
+            android:importantForAutofill="no"
+            android:inputType="textLongMessage" />
+    </androidx.cardview.widget.CardView>
+    <Button
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/layout"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="70dp"
+        app:layout_constraintTop_toBottomOf="@+id/card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/action_bar_shap"
+        android:text="@string/enter"
+        android:id="@+id/enterIdButton"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:textSize="20sp" />
+
+    <LinearLayout
+        android:id="@+id/layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/enterIdButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="20dp"
+            android:paddingEnd="10dp"
+            android:text="@string/have_an_id"
+            android:textColor="#000" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/enter_it_here"
+            android:id="@+id/enterIDHere"
+            android:textColor="@color/greenDark"
+            android:textSize="15sp" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
